<resources>
    <string name="app_name">ChatApp</string>
    <string name="text_create_account">Sign Up</string>
    <string name="text_sign_in">Sign In</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="or">or</string>
    <string name="text_sign_out">Sign Out</string>
    <string name="texxt_you_are_signed_in">you_are_signed_in</string>
    <string name="text_call">Call</string>
    <string name="text_chat">Chat</string>
    <string name="text_phone_book">Phone book</string>
    <string name="text_display_name">Display Name</string>
    <string name="text_hi_there">Hi there</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_message">Message</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_username">Username</string>
    <string name="text_search_user">Search User</string>
</resources>